--- a/ReportGeneration/src/app/landingpage/landingpage.component.html
+++ b/ReportGeneration/src/app/landingpage/landingpage.component.html
@@ -1,6 +1,50 @@
-<div class="row">
+<!--<div class="row">
   <div class="col-lg-4" *ngFor="let item of reportTableData">
      <button type="button" class="btn btn-default" *ngIf="selectedlogindata.action.indexOf(item.report)>=0?true:false" (click)="navigationCheck(item.report)">{{item.reportname}}</button>
      <button type="button" class="btn btn-default" *ngIf="selectedlogindata.action.indexOf(item.report)<0?true:false" disabled >{{item.reportname}}</button>
+  </div>
+</div>-->
+<div class="panel panel-default">
+  <div class="panel-body searchPannel">
+      <div class=" fleft">
+        <label htmlFor="usr" class="fleft">Search By Report Number:</label>
+        <input type="text" placeholder="Type report number" [(ngModel)]="searchText" class="form-control fleft" id="reportNumber"/>
+      </div>
+      <p class="or-design fleft">--Or--</p>
+      <div class="fleft sorBysection">
+        <label class="fleft" for="sel1">Sort By:</label>
+        <select class="form-control fleft" id="sorbySelect" [(ngModel)]="selectText" (change)="sortChange($event.target.value)">
+          <option value="NONE">Select Sort option</option>          
+          <option value="SRTNO">Report#</option>
+          <option value="SRTNAME">Report Name</option>
+        </select>
+      </div>
+      <div class="fleft">
+          <button type="button" class="btn btn-primary" (click)="clearFilter()">Reset Table Data</button>        
+      </div>
+  </div>
+</div>
+<h4>Report Details:</h4>
+<div class="row">
+  <div class="col-sm-10 col-sm-offset-1">
+    <table class="table table-striped table-bordered">
+      <thead>
+        <tr>
+          <td scope="col">Report</td>
+          <td scope="col">Report Name</td>
+          <td scope="col"></td>
+        </tr>
+      </thead>
+      <tbody>
+        <tr *ngFor="let item of reportTableData | filter : searchText" [ngClass]="{'in_active':selectedlogindata.action.indexOf(item.report)<0}" (click)="navigationCheck(item.report)">
+          <td>{{item.report}}</td>
+          <td>{{item.reportname}}</td>
+          <td>
+            <button type="button" class="btn btn-default" *ngIf="selectedlogindata.action.indexOf(item.report)>=0?true:false" (click)="navigationCheck(item.report)">View Details</button>
+            <button type="button" class="btn btn-default" *ngIf="selectedlogindata.action.indexOf(item.report)<0?true:false" disabled>View Details</button>
+          </td>
+        </tr>
+      </tbody>
+    </table>
   </div>
 </div>
