--- a/ReportGeneration/src/app/reportstable/reportstable.component.html
+++ b/ReportGeneration/src/app/reportstable/reportstable.component.html
@@ -1,7 +1,7 @@
 <div class="row">
   <div class="col-lg-12">
     <div class="example-container mat-elevation-z8">
-      <mat-table #table [dataSource]="dataSource" >
+      <mat-table #table [dataSource]="dataSource">
         <ng-container *ngFor="let attr of dataObject">
           <ng-container *ngIf="attr.key.indexOf('Readonly')<0 && attr.key.toUpperCase().indexOf('COMMENTS')<0">
             <ng-container [matColumnDef]="attr.key">
@@ -10,7 +10,7 @@
             </ng-container>
           </ng-container>
           <ng-container *ngIf="attr.key.indexOf('Readonly')>=0 && attr.key.toUpperCase().indexOf('COMMENTS')<0">
-             <ng-container [matColumnDef]="attr.key">
+            <ng-container [matColumnDef]="attr.key">
               <mat-header-cell *matHeaderCellDef>{{attr.key}}</mat-header-cell>
               <mat-cell *matCellDef="let row">
                 <app-edit-popup [itemid]="attr.index" [tableContent]="{'data':row,column:displayColumnHeader}" (tableContentStatusChange)='tableContentStatusChange(event)'></app-edit-popup>
@@ -18,17 +18,17 @@
             </ng-container>
           </ng-container>
           <ng-container *ngIf="attr.key.toUpperCase().indexOf('COMMENTS')>=0">
-             <ng-container [matColumnDef]="attr.key">
-                <mat-header-cell *matHeaderCellDef>
-                  <button mat-button class="btn btn-default" [matMenuTriggerFor]="menu">Download</button>
-                  <mat-menu #menu="matMenu">
-                    <button mat-menu-item (click)="downloadCSV()">CSV</button>
-                    <button mat-menu-item (click)="downloadExcel()">Excel</button>
-                  </mat-menu>
-                </mat-header-cell>
+            <ng-container [matColumnDef]="attr.key">
+              <mat-header-cell *matHeaderCellDef>
+                <button mat-button class="btn btn-default" [matMenuTriggerFor]="menu">Download</button>
+                <mat-menu #menu="matMenu">
+                  <button mat-menu-item (click)="downloadCSV()">CSV</button>
+                  <button mat-menu-item (click)="downloadExcel()">Excel</button>
+                </mat-menu>
+              </mat-header-cell>
               <!--<mat-header-cell *matHeaderCellDef>{{attr.key}}</mat-header-cell>-->
               <mat-cell *matCellDef="let selement">
-                 <textarea class="form-control" rows="5" id="comment" disabled>{{selement[attr.key]}}</textarea>
+                <textarea class="form-control" rows="5" id="comment" disabled>{{selement[attr.key]}}</textarea>
               </mat-cell>
             </ng-container>
           </ng-container>
@@ -61,8 +61,18 @@
         <mat-header-row *matHeaderRowDef="displayColumnHeader"></mat-header-row>
         <mat-row *matRowDef="let row; columns: displayColumnHeader;"></mat-row>
       </mat-table>
-      <mat-paginator #paginator [pageSize]="10" [pageSizeOptions]="[5, 10, 20]">
-      </mat-paginator>
+      <div class="row ">
+        <div class="col-md-offset-6 col-md-2 form-group">
+          <label for="sel1">Select Page#:</label>
+        </div>
+        <div class="col-md-3 form-group">
+          <select class="form-control" id="sel1" (change)="onChangePage($event)">
+            <option *ngFor="let pageNumber of PageNumberList" value="pageNumber">{{pageNumber}}</option>
+         </select>
+        </div>
+      </div>
+      <!--<mat-paginator #paginator [pageSize]="dataSource.data.length" [pageSizeOptions]="pageOptions">
+      </mat-paginator>-->
     </div>
   </div>
 </div>
