--- a/ReportGeneration/src/app/reportstable/reportstable.component.html
+++ b/ReportGeneration/src/app/reportstable/reportstable.component.html
@@ -67,7 +67,7 @@
         </div>
         <div class="col-md-3 form-group">
           <select class="form-control" id="sel1" (change)="onChangePage($event)">
-            <option *ngFor="let pageNumber of PageNumberList" value="pageNumber">{{pageNumber}}</option>
+            <option *ngFor="let pageNumber of PageNumberList" >{{pageNumber}}</option>
          </select>
         </div>
       </div>
