--- a/ReportGeneration/src/app/reportstable/reportstable.component.html
+++ b/ReportGeneration/src/app/reportstable/reportstable.component.html
@@ -2,10 +2,22 @@
   <div class="col-lg-12">
     <div class="example-container mat-elevation-z8">
       <mat-table #table [dataSource]="dataSource">
-        <ng-container *ngFor="let attr of dataObject">
+        <ng-container *ngFor="let attr of dataObject;let i = index">
           <ng-container *ngIf="attr.key.indexOf('Readonly')<0 && attr.key.toUpperCase().indexOf('COMMENTS')<0">
             <ng-container [matColumnDef]="attr.key">
+              <ng-container *ngIf="i==0">
+                <mat-header-cell  *matHeaderCellDef>{{attr.key}}
+                    <button mat-button class="btn btn-default marginLeft5" [matMenuTriggerFor]="menu">Download</button>
+                    <mat-menu #menu="matMenu">
+                      <button mat-menu-item (click)="downloadCSV()">CSV</button>
+                      <button mat-menu-item (click)="downloadExcel()">Excel</button>
+                    </mat-menu>
+                </mat-header-cell>
+              </ng-container>
+              <ng-container *ngIf="i!=0">
               <mat-header-cell *matHeaderCellDef>{{attr.key}}</mat-header-cell>
+              </ng-container>
+              
               <mat-cell *matCellDef="let selement"> {{selement[attr.key]}} </mat-cell>
             </ng-container>
           </ng-container>
@@ -17,7 +29,7 @@
               </mat-cell>
             </ng-container>
           </ng-container>
-          <ng-container *ngIf="attr.key.toUpperCase().indexOf('COMMENTS')>=0">
+          <!--<ng-container *ngIf="attr.key.toUpperCase().indexOf('COMMENTS')>=0">
             <ng-container [matColumnDef]="attr.key">
               <mat-header-cell *matHeaderCellDef>
                 <button mat-button class="btn btn-default" [matMenuTriggerFor]="menu">Download</button>
@@ -26,12 +38,11 @@
                   <button mat-menu-item (click)="downloadExcel()">Excel</button>
                 </mat-menu>
               </mat-header-cell>
-              <!--<mat-header-cell *matHeaderCellDef>{{attr.key}}</mat-header-cell>-->
               <mat-cell *matCellDef="let selement">
                 <textarea class="form-control" rows="5" id="comment" disabled>{{selement[attr.key]}}</textarea>
               </mat-cell>
             </ng-container>
-          </ng-container>
+          </ng-container>-->
         </ng-container>
         <!--<ng-container [matColumnDef]="readonly">
       <mat-header-cell *matHeaderCellDef> Read only </mat-header-cell>
